# ztfdr24-embeddings

./: .gitignore  main.py  make_embed_no_lc.py  pixi.toml  pyproject.toml
